--- a/site/frankensteinsroomba.html
+++ b/site/frankensteinsroomba.html
@@ -11,8 +11,8 @@
 <div class="text">
     <div></div>
     Frankenstein's Roomba is a new robot in development. It will compete in Dragon Con Robot Battles 2025. The goal is to be a final iteration on several design concepts we've employed
-    successfully in the past, including suction fans and our customized high-torque drivetrain. It doesn't have an active weapon, but is capable of forcing other robots
-    on top of it 
+    successfully in the past, including banned Formula 1 technology. It doesn't have an active weapon, but is capable of forcing other robots
+    on top of it to push them off the edge.
     <div></div>
 </div>
 <div class="image">
