--- a/site/corporate.html
+++ b/site/corporate.html
@@ -4,7 +4,7 @@
     <h1>Corporate Sponsorship</h1>
     <div class="text">
         <div></div>
-        Want to become a corporate sponsor of Scrappy's Garage and fuel my CRIPPLING heroin addiction? Contact us at <a href="mailto:connect@scrappysgarage.org">connect@scrappysgarage.org</a> about becoming a sponsor.
+        Want to become a corporate sponsor of Scrappy's Garage and fuel the development of high-quality robotics projects and the education of the next generation of engineers? Contact us at <a href="mailto:connect@scrappysgarage.org">connect@scrappysgarage.org</a> about becoming a sponsor.
         <div></div>
     </div>
     [=checkmark-] <img class="mark" src="[^config.baseurl]/res/check-mark.svg"> [/]
@@ -12,33 +12,35 @@
 
     <div class="tiers">
         <div>
-            <div>Tier 3 | Clever Name</div>
-            <div>$100/month</div>
+            <div>Tier 3</div>
+            <div>$200</div>
             <div>
-            [^checkmark] Meaningful contribution to the <br>
-            [^checkmark] Company stickers on robots<br>
-            [^xmark] Logo on shirts<br>
-            [^xmark] large sums of meth money
+            [^checkmark] Meaningful contribution to the next generation of roboticists<br>
+            [^checkmark] Company name on website<br>
+            [^xmark] Company logo on website<br>
+            [^xmark] Company stickers on robots<br>
+            [^xmark] Company logo on shirts<br>
             </div>
         </div>
         <div>
-            <div>Tier 2 | Clever Name</div>
-            <div>$200/month</div>
+            <div>Tier 2</div>
+            <div>$500</div>
             <div>
-            [^checkmark] Meaningful contribution to the <br>
+            [^checkmark] Meaningful contribution to the next generation of roboticists<br>
+            [^checkmark] Company name on website<br>
+            [^checkmark] Company logo on website<br>
             [^checkmark] Company stickers on robots<br>
-            [^xmark] Logo on shirts<br>
-            [^xmark] large sums of meth money
+            [^xmark] Company logo on shirts<br>
             </div>
         </div>
         <div>
-            <div>Tier 1 | Clever Name</div>
-            <div>$500/month</div>
+            <div>Tier 1</div>
+            <div>$1000</div>
             <div>
-            [^checkmark] Meaningful contribution to the <br>
+            [^checkmark] Meaningful contribution to the next generation of roboticists<br>
+            [^checkmark] Company logo on website<br>
             [^checkmark] Company stickers on robots<br>
-            [^xmark] Logo on shirts<br>
-            [^xmark] large sums of meth money
+            [^checkmark] Company logo on shirts<br>
             </div>
         </div>
     </div>
