--- a/site/flibbetygibbet.html
+++ b/site/flibbetygibbet.html
@@ -1,11 +1,12 @@
 [!][@on minify]
 [=content-]
+<!--
     <div class="backvideo">
         <video autoplay muted loop>
             <source src="[^config.baseurl]/res/far-too-much-bird.webm" type="video/webm">
         </video>
         <div class="flexscreen"></div>
-    </div>
+    </div>-->
     <h1>Flibbetygibbet</h1>
     <div class="text">
         <div></div>
