--- a/site/index.html
+++ b/site/index.html
@@ -31,8 +31,10 @@
     <h2>Tier 1</h2>
     <div id="tier1sponsors"><a href="https://www.facebook.com/p/Happy-Tears-Feline-Foundation-100094602161633/"><img src="[^config.baseurl]/res/happy_tears.png"></a></div>
     <h2>Tier 2</h2>
-    <div id="tier2sponsors"><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a><a><img src="[^config.baseurl]/res/scrappylogo.png"></a></div>
-    <div id="tier3sponsors" class="text"><div></div>Big thanks to our tier 3 sponsors, McMurtry-Spierling, the Tyler Clarke Foundation For Being Awesome, Google, Linux<br><br>... <i>and many individual contributors!</i> We couldn't do it without you!<div></div></div>
+    <div id="tier2sponsors">
+        <i>No tier 2 sponsors yet.</i>
+    </div>
+    <div id="tier3sponsors" class="text"><div></div>Big thanks to our tier 3 sponsors<br><br>... <i>and many individual contributors!</i> We couldn't do it without you!<div></div></div>
 [/]
 
 [#common.html]
