--- a/site/corporate.html
+++ b/site/corporate.html
@@ -38,6 +38,7 @@
             <div>$1000</div>
             <div>
             [^checkmark] Meaningful contribution to the next generation of roboticists<br>
+            [^checkmark] Company name on website<br>
             [^checkmark] Company logo on website<br>
             [^checkmark] Company stickers on robots<br>
             [^checkmark] Company logo on shirts<br>
